# pdns

build-scripts/: build-auth-debian  build-pkg.py  dnsdist.spec.j2  docker-build-auth-rpm  docker-build-rpm
build-scripts/auth-centos-7/: Dockerfile  docker-compose.yml
build-scripts/debian-authoritative/: control  copyright  pdns-backend-mysql.postinst  pdns-backend-sqlite3.postinst  pdns-server.preinst  rules
build-scripts/dockerfiles/: centos.j2  tarball-builder
docs/: Makefile.am
docs/manpages/: rec_control.1.md
modules/bindbackend/: Makefile.am
modules/remotebackend/: remotebackend.cc  remotebackend.hh  test-remotebackend.cc
pdns/: Makefile.am  dbdnsseckeeper.cc  dnsbackend.cc  dnsbackend.hh  dnsrecordoracle.hh  dnsrecords.hh  dnsseckeeper.cc  dnsseckeeper.hh  lwres.cc  pdns-keyroller.cc  pdns-keyroller.py  pdns_recursor.cc  pdnsutil.cc  rec_channel_rec.cc  recursor_cache.cc  recursor_cache.hh  reczones.cc  secpoll-recursor.cc  slavecommunicator.cc  srrecordoracle.hh  syncres.cc  syncres.hh  validate-recursor.cc  validate-recursor.hh  validate.cc  validate.hh  vstate.cc  vstate.hh  ws-api.cc  ws-auth.cc
pdns/dnsdistdist/: Makefile.am
pdns/recursordist/: .gitignore  Makefile.am  configure.ac  dnsrecordoracle.hh  process_records.cc  process_records.hh  srrecordoracle.hh  test-functions.cc  test-functions.hh  test-process_records_cc.cc  (+3 more)
regression-tests.api/: runtests.py  test_Servers.py
regression-tests.recursor/: config.sh
regression-tests.recursor-dnssec/: basicDNSSEC.py  recursortests.py  test_Expired.py  test_Flags.py  test_Simple.py
(+14 files in other folders)
